v2.2.0 -Add Barier for download CV -Fix Forgot Password Bug
